--- a/EconomySimulator2/EconomySimulator2.csproj
+++ b/EconomySimulator2/EconomySimulator2.csproj
@@ -6,4 +6,8 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="ScottPlot.WPF" Version="4.1.17" />
+  </ItemGroup>
+
 </Project>
